--- a/rating/templates/rating/_base_template.html
+++ b/rating/templates/rating/_base_template.html
@@ -6,26 +6,28 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="VVKo">
     <link rel="icon" href="/static/img/favicon.ico">
 
     <title>Рейтинг</title>
     <!-- Bootstrap core CSS -->
+      {% block head %}
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
 <link href="/static/css/dashboard.css" rel="stylesheet">
-
+{% endblock %}
   </head>
 
   <body>
 
 
     <nav class="navbar navbar-dark sticky-top bg-dark flex-md-nowrap p-0">
-      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Рейтинг</a>
+      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="/">КУРАТОРИ</a>
       <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
-          <a class="nav-link" href="/logout">Sign out</a>
+            {% if user.is_authenticated %}
+          <a class="nav-link" href="{% url 'logout' %}">ВИЙТИ</a>
+            {% endif %}
         </li>
       </ul>
     </nav>
@@ -39,42 +41,6 @@
           <div class="sidebar-sticky">
             <ul class="nav flex-column">
                 {% block sidebar %}
-              <li class="nav-item">
-                <a class="nav-link" href="/">
-                  <span data-feather="home"></span>
-                  Домашня
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/modules">
-                  <span data-feather="file"></span>
-                  Модулі
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/shopping">
-                  <span data-feather="shopping-cart"></span>
-                  Кошик ;)
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/students">
-                  <span data-feather="users"></span>
-                  Студенти ПВ
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/kurators">
-                  <span data-feather="users"></span>
-                  Куратори
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="/groups">
-                  <span data-feather="users"></span>
-                  Групи
-                </a>
-              </li>
                     {% endblock %}
             </ul>
 
@@ -97,13 +63,14 @@
 
 
           {% block content %}
+
     {% endblock %}
 
 
 
 
 
-
+{% block scripts %}
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
@@ -135,7 +102,7 @@
 
 </script>
 
-
+{% endblock %}
 
 
   </body>
