--- a/rating/templates/rating/index.html
+++ b/rating/templates/rating/index.html
@@ -43,6 +43,9 @@
 
 
    {% else %}
+                <div>Щоб протестувати</div>
+               <div>Логін : M</div>
+                <div>Пароль : 007</div>
      <form method="post" action="{% url 'group' %}">
         {% csrf_token %}
             <div>
