--- a/rating/templates/rating/student.html
+++ b/rating/templates/rating/student.html
@@ -26,14 +26,14 @@
               </li>
 {% endblock %}
 
-{% block h1 %}Група {{ group.name }} {% endblock %}
+{% block h1 %}Індивідуальний рейтинг студента {% endblock %}
 
 
 
 
 {% block buttons %}
     {% if user.is_authenticated %}
-     <button class="btn btn-sm btn-outline-secondary" id="add-student">Додати студента</button>
+     <button class="btn btn-sm btn-outline-secondary" id="to-group">Назад до групи</button>
    {% endif %}
 
 
@@ -41,9 +41,8 @@
 
 {% block main %}
 
-     <h2 class="h5">Куратор: <b>{{ group.curator }}</b></h2>
 
-     <div id="studentsDiv"></div>
+
 
 
 {% endblock %}
@@ -58,11 +57,6 @@
     $(document).ready(function() {
 
 
-        table_group_detail('{% url "ajax-group-detail" pk=group.id %}', '{{ group.name }}');
-        add_student("#add-student", '{% url "ajax-group-detail" pk=group.id %}', '{{ csrf_token }}', '{{ group.name }}');
-        local_message();
-        delete_student('{% url "ajax-student-delete" %}');
-        student();
 
     });
 
