--- a/rating/templates/rating/student.html
+++ b/rating/templates/rating/student.html
@@ -26,7 +26,7 @@
               </li>
 {% endblock %}
 
-{% block h1 %}Індивідуальний рейтинг студента {% endblock %}
+{% block h1 %}ІРС {% endblock %}
 
 
 
@@ -40,7 +40,7 @@
 {% endblock %}
 
 {% block main %}
-
+    {{ student.get_student }}
 
 
 
