--- a/rating/templates/rating/student.html
+++ b/rating/templates/rating/student.html
@@ -5,6 +5,7 @@
     <link href="/static/css/jquery-ui.css" rel="stylesheet">
     <link href="/static/css/jquery-confirm.css" rel="stylesheet">
     <link href="/static/css/toastr.min.css" rel="stylesheet">
+    <link href="/static/css/rating.css" rel="stylesheet">
 {% endblock %}
 
 
@@ -40,7 +41,23 @@
 {% endblock %}
 
 {% block main %}
-    {{ student.get_student }}
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+            <h1 class="h2"><b>{{ student.get_student }}</b></h1></div>
+
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+            <h1 class="h2">Блок 1. Навчальна робота </h1></div>
+    <div id="blockOneDiv"></div>
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+            <h1 class="h2">Блок 2. Наукова робота </h1></div>
+
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+            <h1 class="h2">Блок 3. Громадська діяльність </h1></div>
+
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+            <h1 class="h2">Блок 4. Культурно-мистецька діяльність </h1></div>
+
+    <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3 border-bottom">
+            <h1 class="h2">Блок 5. Спортивно-масова робота</h1></div>
 
 
 
@@ -53,9 +70,15 @@
     <script src="/static/js/jquery-confirm.js"></script>
     <script src="/static/js/toastr.min.js"></script>
     <script src="/static/js/reytyng.js"></script>
+
     <script type="text/javascript">
     $(document).ready(function() {
 
+        table_block_one('{% url "ajax-student-detail" pk=student.id %}', '{{ student.get_student }}');
+
+$('#to-group').on('click', function () {
+    location.href = "{% url 'group' %}";
+});
 
 
     });
